# pokemon-arena

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  serde_handler.rs
src-tauri/src/email_auth/: mod.rs
src-tauri/src/pokemon/: pokemon_indexer.rs  pokemon_stats.json
src/email-auth/: AuthMenu.tsx  VerifyKeyMenu.tsx  WebSocketProvider.tsx  authcontext.tsx  protected-route.tsx  types.tsx
src/home/: HomeMenu.tsx
src/networking/: ServerIpMenu.tsx
src/pokedex/: Pokedex.tsx
