[package]
name = "pokemon-arena"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pokemon_arena_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


tokio = { version = "1.0", features = ["full"] }


# Random number generation for verification codes
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Simple Quitting
quit = "2.0.0"

# Text input widget
rat-text = "1.0.5"
color-eyre = "0.6.5"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

# Email Client
lettre = { version = "0.11.17", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
lettre_email = "0.9.4"
env_logger = "0.11.8"
native-tls = "0.2.14"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }


